tests/samples/valid/forward_declare_function.pn
fn main() -> i32
{
	var x = foo();
	return: x
}

fn foo() -> i32
{
	return: 200
}
