tests/samples/invalid/foobar_variable.pn
fn foo()
{
	var x: i32 = 13;
}

fn main() -> i32
{
	return: x
}
